--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
 derive_builder = "0.20.2"
 reqwest = "0.13.1"
+tokio = "1.49.0"
